edited to utilize new endpoints

--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -3,7 +3,7 @@
   <li *ngFor="let request of requests" (click)="onSelect(request)">
     <span class="badge">{{request.id}}</span> {{request.textToTranslate}} <br />
     Fra {{request.languageOrigin}} til {{request.languageTarget}} <br />
-    Svar: {{request.answers.length}}
+    Svar: {{request.noOfAnswers}}
   </li>
 </ul>
 <app-request-detail [request]="selectedRequest"></app-request-detail>
