--- a/src/app/request-detail/request-detail.component.html
+++ b/src/app/request-detail/request-detail.component.html
@@ -2,18 +2,11 @@
 
   <h2>Forespørgsel</h2>
   <div>
-    <p>Originalteksten er på: {{request.languageOrigin}} </p>
     <p>Original tekst:
       "{{request.textToTranslate}}"
     </p>
-    <p>Forslag er oversat til: {{request.languageTarget}}
+    <p>Oversat fra <b>{{request.languageOrigin}}</b> til <b>{{request.languageTarget}}</b> og har {{request.noOfAnswers}} svar</p>
 
-    </p>
-    <ul>
-      <li *ngFor="let answer of request.answers">
-        {{answer.textTranslated}}
-      </li>
-    </ul>
   </div>
 
 </div>
