--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -1,11 +1,16 @@
-<h2>Mine forespørgsler</h2>
-<ul>
-  <li *ngFor="let request of requests" (click)="onSelect(request)">
-    <span class="badge">{{request.id}}</span> {{request.textToTranslate}} <br />
-    Fra {{request.languageOrigin}} til {{request.languageTarget}} <br />
-    Svar: {{request.noOfAnswers}}
-  </li>
-</ul>
-<div *ngIf="selectedRequest != null">
-  <app-request-detail [request]="selectedRequest"></app-request-detail>
+<div class="row" style="margin-top: 5px;">
+  <div class="col-sm-4">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-success"><a href="#" class="d-flex justify-content-between align-items-center">Opret ny forespørgsel<span class="badge badge-primary badge-pill">+</span></a></li>
+      <li *ngFor="let request of requests" class="list-group-item">
+        <a routerLink="/requests/{{request.requestId}}"><div class="d-flex justify-content-between align-items-center" style="width=100%;">
+        {{request.textToTranslate}}
+        <span *ngIf="request.noOfAnswers > 0" class="badge badge-primary badge-pill">{{request.noOfAnswers}}</span></div>
+        <span style="font-size: .8em"> {{request.languageOrigin}} <img src="/assets/arrow.png" /> {{request.languageTarget}}</span></a>
+      </li>
+    </ul>
+  </div>
+  <div class="col-sm-8">
+    <app-request-detail [request]="selectedRequest"></app-request-detail>
+  </div>
 </div>
