--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,23 @@
-  <h1>{{ title }}</h1>
-<app-requests></app-requests>
-<app-messages></app-messages>
-
+<div class="container">
+  <div class="row">
+    <h1>{{ title }}</h1>
+  </div>
+  <div class="row">
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a routerLink="/requests" class="nav-link active">Mine forespørgsler</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Besvar forespørgsler</a>
+      </li>
+    </ul>
+  </div>
+  <div class="row">
+    <div class="col-xl-10">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="col-xl-2">
+      <app-messages></app-messages>
+    </div>
+  </div>
+</div>
