--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <a routerLink="/requests" class="nav-link active">Mine forespørgsler</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Besvar forespørgsler</a>
+        <a routerLink="/answers" class="nav-link">Besvar forespørgsler</a>
       </li>
     </ul>
   </div>
