--- a/src/app/request-detail/request-detail.component.html
+++ b/src/app/request-detail/request-detail.component.html
@@ -1,12 +1,9 @@
-<div *ngIf="request">
-  <p style="font-size: 1.8em;"><span style="font-size: .4em; padding:0; margin:0; ">Originaltekst:</span><br/>{{request.textToTranslate}}</p>
-  <div>
-    <p>Oversat fra <b>{{request.languageOrigin}}</b> til <b>{{request.languageTarget}}</b> og har {{request.noOfAnswers}} svar</p>
-    <ul *ngFor="let answer of answers" class="list-group">
-      <li class="list-group-item" style="background: #EEF1F7; text-decoration-color: #698187; margin-bottom: 2px;">{{ answer.textTranslated }}</li>
-    </ul>
 
+    <div *ngIf="request">
+      <p style="font-size: 1.8em;"><span style="font-size: .4em; padding:0; margin:0; ">Originaltekst:</span><br/>{{request.textToTranslate}}</p>
+      <p>Oversat fra <b>{{request.languageOrigin}}</b> til <b>{{request.languageTarget}}</b> og har {{request.noOfAnswers}} svar</p>
+      <ul class="list-group">
+        <li *ngFor="let answer of answers" class="list-group-item" style="background: #EEF1F7; text-decoration-color: #698187; margin-bottom: 2px;">{{ answer.textTranslated }}</li>
+      </ul>
+    </div>
 
-  </div>
-
-</div>
