--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -2,11 +2,13 @@
   <div class="col-sm-4">
     <ul class="list-group">
       <li class="list-group-item list-group-item-success"><a href="#" class="d-flex justify-content-between align-items-center">Opret ny forespørgsel<span class="badge badge-primary badge-pill">+</span></a></li>
-      <li *ngFor="let request of requests" class="list-group-item">
+      <li *ngFor="let request of requests" class="list-group-item"
+      [class.selected]="request === selectedRequest"
+      (click)="onSelect(request)">
         <a routerLink="/requests/{{request.requestId}}"><div class="d-flex justify-content-between align-items-center" style="width=100%;">
-        {{request.textToTranslate}}
-        <span *ngIf="request.noOfAnswers > 0" class="badge badge-primary badge-pill">{{request.noOfAnswers}}</span></div>
-        <span style="font-size: .8em"> {{request.languageOrigin}} <img src="/assets/arrow.png" /> {{request.languageTarget}}</span></a>
+          {{request.textToTranslate}}
+          <span *ngIf="request.noOfAnswers > 0" class="badge badge-primary badge-pill">{{request.noOfAnswers}}</span></div>
+          <span style="font-size: .8em"> {{request.languageOrigin}} <img src="/assets/arrow.png" /> {{request.languageTarget}}</span></a>
       </li>
     </ul>
   </div>
