--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,10 @@
   <div class="row">
     <ul class="nav nav-pills">
       <li class="nav-item">
-        <a routerLink="/requests" class="nav-link active">Mine forespørgsler</a>
+        <a routerLink="/requests/new" class="nav-link active">Ny forespørgsel</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/requests" class="nav-link">Mine forespørgsler</a>
       </li>
       <li class="nav-item">
         <a routerLink="/answers" class="nav-link">Besvar forespørgsler</a>
@@ -13,11 +16,9 @@
     </ul>
   </div>
   <div class="row">
-    <div class="col-xl-10">
       <router-outlet></router-outlet>
-    </div>
-    <div class="col-xl-2">
+  </div>
+  <div class="row">
       <app-messages></app-messages>
-    </div>
   </div>
 </div>
