--- a/src/app/request-new/request-new.component.html
+++ b/src/app/request-new/request-new.component.html
@@ -1,3 +1,32 @@
-<p>
-  request-new works!
-</p>
+<h3>Her kan du oprette en ny forespørgsel</h3>
+
+<form #requestForm="ngForm" (ngSubmit)="onSubmit()">
+  <div class="form-group row">
+    <label for="textToTranslate" class="col-sm-3 col-form-label" >Tekst der skal oversættes:</label>
+    <div class="col-sm-9">
+      <textarea class="form-control"
+                id="textToTranslate" name="textToTranslate"
+                [(ngModel)]="newRequest.textToTranslate"
+                required ></textarea>
+    </div>
+  </div>
+  <div class="form-group row">
+  <label for="languageOrigin" class="col-sm-3 col-form-label">Hvilket sprog er teksten på?</label>
+    <div class="col-sm-9">
+  <input type="text" class="form-control"
+         id="languageOrigin" name="languageOrigin"
+         [(ngModel)]="newRequest.languageOrigin" required />
+    </div>
+  </div>
+    <div class="form-group row">
+    <label for="languageTarget" class="col-sm-3 col-form-label" >Hvilket sprog skal teksten oversættes til?</label>
+      <div class="col-sm-9">
+  <input type="text" class="form-control"
+         id="languageTarget" name="languageTarget"
+         [(ngModel)]="newRequest.languageTarget" required />
+      </div>
+    </div>
+  <button type="submit" class="btn btn-green" [disabled]="!requestForm.form.valid">Send forespørgsel</button>
+
+</form>
+
