--- a/src/app/answer-list/answer-list.component.html
+++ b/src/app/answer-list/answer-list.component.html
@@ -1,3 +1,18 @@
-<p>
-  answers works!
-</p>
+<div class="row">
+  <div class="col-sm-3">
+    <ul class="list-group">
+      <li *ngFor="let request of requests" class="list-group-item"
+          [class.selected]="request === selectedRequest"
+          (click)="onSelect(request)"
+      >
+        <div class="d-flex justify-content-between align-items-center" style="width=100%;">
+          {{request.textToTranslate}}
+          <span *ngIf="request.noOfAnswers > 0" class="badge badge-primary badge-pill">{{request.noOfAnswers}}</span></div>
+        <span style="font-size: .8em"> {{request.languageOrigin}} <img src="/assets/arrow.png" /> {{request.languageTarget}}</span>
+      </li>
+    </ul>
+  </div>
+  <div class="col-sm-9">
+    <app-answer-detail [request]="selectedRequest"></app-answer-detail>
+  </div>
+</div>
