--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,9 @@
 /* Application-wide Styles */
 h1 {
-  color: #369;
+  color: #0EA396;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
+  font-weight: bolder;
 }
 h2, h3 {
   color: #444;
