--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,24 @@
-<div class="container">
+<div class="container" style="border-bottom: 2px solid #ccc; padding-bottom: 2px;">
+  <h1>{{ title }}</h1>
   <div class="row">
-    <h1>{{ title }}</h1>
-  </div>
-  <div class="row">
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a routerLink="/requests/new" class="nav-link active">Ny forespørgsel</a>
+    <ul class="nav nav-pills" >
+      <li class="nav-item" id="new">
+        <a routerLink="/new/request" class="nav-link" [class.active]="myPath==='/new/request'">Ny forespørgsel</a>
       </li>
-      <li class="nav-item">
-        <a routerLink="/requests" class="nav-link">Mine forespørgsler</a>
+      <li class="nav-item" id="requests">
+        <a routerLink="/requests" class="nav-link" [class.active]="myPath==='/requests'">Mine forespørgsler</a>
       </li>
-      <li class="nav-item">
-        <a routerLink="/answers" class="nav-link">Besvar forespørgsler</a>
+      <li class="nav-item" id="answers">
+        <a routerLink="/answers" class="nav-link" [class.active]="myPath==='/answers'">Besvar forespørgsler</a>
       </li>
     </ul>
   </div>
-  <div class="row">
+</div>
+<div class="container">
+  <div class="row" style="margin-top: 10px;">
+    <div class="col-xl-12" style="padding-bottom: 5px;">
       <router-outlet></router-outlet>
-  </div>
-  <div class="row">
-      <app-messages></app-messages>
+    </div>
   </div>
 </div>
+<app-messages></app-messages>
