--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,9 +1,10 @@
-<h2>Messages</h2>
-<div *ngIf="messageService.messages.length">
-
-
-  <button class="clear"
-          (click)="messageService.clear()">clear</button>
-  <div *ngFor='let message of messageService.messages'> {{message}} </div>
-
+<div class="row" style="background: #ccc; color: #999; padding:10px;">
+  <div class="col-sm-12">
+  <h3>Messages - debugging</h3>
+  <div *ngIf="messageService.messages.length">
+    <button class="clear"
+            (click)="messageService.clear()">clear</button>
+    <div *ngFor='let message of messageService.messages'> {{message}} </div>
+  </div>
+  </div>
 </div>
