--- a/src/app/request-list/request-list.component.css
+++ b/src/app/request-list/request-list.component.css
@@ -1,6 +1,3 @@
-a {
-  color: #000000;
-}
 a:hover {
   color: #ffffff;
   text-decoration: none;
@@ -8,5 +5,9 @@ a:hover {
 li:hover {
   background: #0EA389;
   cursor: pointer;
+}
+a {
+  color: #000000;
+  text-decoration: none;
 }
 
