Page for setting added: ordsome-settings
clean up in api.service:
- nice generics added for more reuseable code

--- a/src/app/answer-form/answer-form.component.html
+++ b/src/app/answer-form/answer-form.component.html
@@ -1,5 +1,5 @@
 <div class="border">
-  <form #answerForm="ngForm" (ngSubmit)="onSubmit()">
+  <form #answerForm="ngForm" (ngSubmit)="onSubmit(); answerForm.reset;">
     <div class="form-group row">
       <label for="languageTarget" class="col-md-3 col-form-label" >Oversættes til:</label>
       <div class="col-md-9">
