--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item" id="answers">
         <a routerLink="/answers" class="nav-link" [class.active]="myPath==='/answers'">Besvar forespørgsler</a>
       </li>
+      <li class="nav-item" id="settings">
+        <a routerLink="/settings" class="nav-link" [class.active]="myPath==='/settings'">Indstillinger</a>
+      </li>
     </ul>
   </div>
 </div>
