--- a/src/app/request-detail/request-detail.component.css
+++ b/src/app/request-detail/request-detail.component.css
@@ -1,1 +1,23 @@
+.list-group-item {
+  background: #EEF1F7; text-decoration-color: #698187; margin-bottom: 2px;
+}
+.request-status {
+  margin: 10px;
+  padding: 10px;
+  background: #1c7430;
+  color: #ffffff;
+  cursor: pointer;
+}
+.closed-request {
+  background: #491217;
+}
+.answer-vote {
+  background: url("../../assets/unselectedStar.png");
+  height: 20px;
+  width: 20px;
+  cursor: pointer
+}
 
+.is-preferred-answer {
+  background: url("../../assets/selectedStar.png");
+}
