adjusted layout to make place for logging

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,4 +1,4 @@
-<div class="row" style="background: #ccc; color: #999; padding:10px;">
+<div class="row messages" style="">
   <div class="col-sm-12">
   <h3>Messages - debugging</h3>
   <div *ngIf="messageService.messages.length">
