--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,35 @@
-<div class="container" style="border-bottom: 2px solid #ccc; padding-bottom: 2px;">
-  <h1>{{ title }}</h1>
+<div class="container-fluid">
   <div class="row">
-    <ul class="nav nav-pills" >
-      <li class="nav-item" id="new">
-        <a routerLink="/new/request" class="nav-link" [class.active]="myPath==='/new/request'">Ny forespørgsel</a>
-      </li>
-      <li class="nav-item" id="requests">
-        <a routerLink="/requests" class="nav-link" [class.active]="myPath==='/requests'">Mine forespørgsler</a>
-      </li>
-      <li class="nav-item" id="answers">
-        <a routerLink="/answers" class="nav-link" [class.active]="myPath==='/answers'">Besvar forespørgsler</a>
-      </li>
-      <li class="nav-item" id="settings">
-        <a routerLink="/settings" class="nav-link" [class.active]="myPath==='/settings'">Indstillinger</a>
-      </li>
-    </ul>
-  </div>
-</div>
-<div class="container">
-  <div class="row" style="margin-top: 10px;">
-    <div class="col-xl-12" style="padding-bottom: 5px;">
-      <router-outlet></router-outlet>
+    <div class="col-md-4">
+      <app-messages></app-messages>
+    </div>
+    <div class="col-md-8">
+      <div class="container-fluid" style="border-bottom: 2px solid #ccc; padding-bottom: 2px;">
+        <h1>{{ title }}</h1>
+        <div class="row">
+          <ul class="nav nav-pills" >
+            <li class="nav-item" id="new">
+              <a routerLink="/new/request" class="nav-link" [class.active]="myPath==='/new/request'">Ny forespørgsel</a>
+            </li>
+            <li class="nav-item" id="requests">
+              <a routerLink="/requests" class="nav-link" [class.active]="myPath==='/requests'">Mine forespørgsler</a>
+            </li>
+            <li class="nav-item" id="answers">
+              <a routerLink="/answers" class="nav-link" [class.active]="myPath==='/answers'">Besvar forespørgsler</a>
+            </li>
+            <li class="nav-item" id="settings">
+              <a routerLink="/settings" class="nav-link" [class.active]="myPath==='/settings'">Indstillinger</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row" style="margin-top: 10px;">
+          <div class="col-xl-12" style="padding-bottom: 5px;">
+            <router-outlet></router-outlet>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-<app-messages></app-messages>
