new nav styling

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,19 +1,21 @@
-<div class="container-fluid">
-  <h1>{{ title }}</h1>
-  <div class="row">
-    <ul class="nav nav-tabs" >
-      <li class="nav-item" id="new">
-        <a routerLink="/new/request" class="nav-link" [class.active]="myPath==='/new/request'">Ny forespørgsel</a>
-      </li>
-      <li class="nav-item" id="requests">
-        <a routerLink="/requests" class="nav-link" [class.active]="myPath==='/requests'">Mine forespørgsler</a>
-      </li>
-      <li class="nav-item" id="answers">
-        <a routerLink="/answers" class="nav-link" [class.active]="myPath==='/answers'">Besvar forespørgsler</a>
-      </li>
-      <li class="nav-item" id="settings">
-        <a routerLink="/settings" class="nav-link" [class.active]="myPath==='/settings'">Indstillinger</a>
-      </li>
-    </ul>
-  </div>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+      <ul class="navbar-nav nav mr-auto nav-pills" >
+        <li role="presentation" class="nav-item"><a routerLink="/" class="navbar-brand">{{ title }}</a></li>
+        <li role="presentation" id="new" class="nav-item">
+          <a routerLink="/new/request" class="nav-link" [class.active]="myPath==='/new/request'">Ny forespørgsel</a>
+        </li>
+        <li role="presentation" id="requests" class="nav-item">
+          <a routerLink="/requests" class="nav-link" [class.active]="myPath==='/requests'">Mine forespørgsler</a>
+        </li>
+        <li role="presentation" id="answers" class="nav-item">
+          <a routerLink="/answers" class="nav-link" [class.active]="myPath==='/answers'">Besvar forespørgsler</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav nav nav-pills navbar-right">
+        <li role="presentation" id="settings" class="nav-item">
+          <a routerLink="/settings" class="nav-link" [class.active]="myPath==='/settings'">Indstillinger</a>
+        </li>
+      </ul>
+
+</nav>
