--- a/src/app/answer-list/answer-list.component.html
+++ b/src/app/answer-list/answer-list.component.html
@@ -7,7 +7,7 @@
           (click)="onSelect(request)">
         <div class="d-flex justify-content-between align-items-center" style="width=100%;">
           {{request.textToTranslate}}
-          <span *ngIf="request.noOfAnswers > 0" class="badge badge-primary badge-pill">{{request.noOfAnswers}}</span></div>
+          <span *ngIf="request.noOfAnswers > 0" class="badge badge-info badge-pill">{{request.noOfAnswers}}</span></div>
         <span style="font-size: .8em"> {{request.languageOrigin}} <img src="/assets/arrow.png" /> {{request.languageTarget}}</span>
       </li>
     </ul>
