--- a/src/app/request-new/request-new.component.html
+++ b/src/app/request-new/request-new.component.html
@@ -15,7 +15,7 @@
     <div class="col-sm-9">
   <input type="text" class="form-control"
          id="languageOrigin" name="languageOrigin"
-         [(ngModel)]="newRequest.languageOrigin" required />
+         [(ngModel)]="newRequest.languageOriginId" required />
     </div>
   </div>
     <div class="form-group row">
@@ -23,7 +23,7 @@
       <div class="col-sm-9">
   <input type="text" class="form-control"
          id="languageTarget" name="languageTarget"
-         [(ngModel)]="newRequest.languageTarget" required />
+         [(ngModel)]="newRequest.languageTargetId" required />
       </div>
     </div>
   <button type="submit" class="btn btn-green" [disabled]="!requestForm.form.valid">Send forespørgsel</button>
