creating new request: language dropdown is working

--- a/src/app/ordsome-settings/ordsome-settings.component.html
+++ b/src/app/ordsome-settings/ordsome-settings.component.html
@@ -3,5 +3,5 @@
   Opgrader til en bruger der hjælper til med at oversætte for andre.
 </p>
 <p>
-  Din guid er: {{localUserGuid}}
+  Din guid er: {{ordsomeService.userId}}
 </p>
